# kinelearn

./: .gitignore  README.md  pyproject.toml
configs/: drosophila_bilstm_episode_checkpoint.yaml  drosophila_blt_dynamic_relational.yaml  drosophila_blt_static_relational.yaml  drosophila_blt_static_relational_hard_negative.yaml  drosophila_blt_static_relational_residual_tcn.yaml  drosophila_blt_static_relational_spe1_ib8.yaml  drosophila_blt_static_relational_spe32_ib128.yaml  drosophila_blt_static_relational_spe32_ib256.yaml  drosophila_blt_static_relational_spe32_ib32.yaml  drosophila_blt_static_relational_spe32_ib8.yaml  drosophila_blt_static_relational_spe8_ib8.yaml  drosophila_example.yaml  example_config.yaml
src/KineLearn/core/: evaluation.py  features.py  generators.py  hard_negatives.py  manifests.py  models.py
src/KineLearn/scripts/: archive_results.py  batch_eval_splits.py  calculate_features.py  compare_sweeps.py  eval.py  screen_hard_negatives.py  select_ensemble.py  select_threshold_map.py  split_variability.py  train.py
tests/: test_archive_results.py  test_batch_eval_splits.py  test_calculate_features.py  test_compare_sweeps.py  test_eval.py  test_features.py  test_generators.py  test_hard_negatives.py  test_models.py  test_select_ensemble.py  test_split_variability_resume.py  test_train_checkpoint_selection.py
