[project]
name = "KineLearn"
version = "0.1.0"
description = "Feature extraction and behavior analysis from DeepLabCut outputs"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
kinelearn-calc = "KineLearn.scripts.calculate_features:main"
kinelearn-split = "KineLearn.scripts.split_dataset:main"
kinelearn-train = "KineLearn.scripts.train:main"
kinelearn-eval = "KineLearn.scripts.eval:main"
kinelearn-predict = "KineLearn.scripts.predict:main"
kinelearn-create-ensemble = "KineLearn.scripts.create_ensemble:main"
kinelearn-select-ensemble = "KineLearn.scripts.select_ensemble:main"
kinelearn-restore-run-artifacts = "KineLearn.scripts.restore_run_artifacts:main"
kinelearn-plot-timeline = "KineLearn.scripts.plot_timeline:main"
kinelearn-split-variability = "KineLearn.scripts.split_variability:main"
kinelearn-batch-eval-splits = "KineLearn.scripts.batch_eval_splits:main"
kinelearn-select-threshold-map = "KineLearn.scripts.select_threshold_map:main"
kinelearn-compare-sweeps = "KineLearn.scripts.compare_sweeps:main"
kinelearn-archive-results = "KineLearn.scripts.archive_results:main"
kinelearn-screen-hard-negatives = "KineLearn.scripts.screen_hard_negatives:main"
